Added simpler API for download plus express routes
/download/{os}/{arch}
